[package]
name = "unique_64"
version = "0.1.0"
edition = "2021"
description = "A handy struct for dispatching out unique u64s as IDs."
authors = ["jordan4ibanez"]
license = "GPL-2.0-or-later"
keywords = ["utility", "uuid", "unique", "u64", "helpful"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
